# astmops

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
docs/: astmops_diagram.png.license
src/: CMakeLists.txt
src/app/: CMakeLists.txt  astmops.desktop  icon.png.license  main.cpp
src/lib/: CMakeLists.txt  aerodrome.cpp  aerodrome.h  aerodromereaderinterface.h  airport.h  aixmreader.cpp  aixmreader.h  areahash.h  asterix.cpp  asterix.h  asterixxmlreader.cpp  asterixxmlreader.h  astmops.cpp  astmops.h  config.cpp  config.h  counters.cpp  counters.h  dgpscsvreader.cpp  dgpscsvreader.h  evaluator.cpp  evaluator.h  functions.cpp  functions.h  geofunctions.cpp  geofunctions.h  kmlreader.cpp  kmlreader.h  message.cpp  message.h  mopsprocessor.cpp  mopsprocessor.h  perfevaluator.cpp  perfevaluator.h  recordcollator.cpp  recordcollator.h  recordfilter.cpp  recordfilter.h  targetreport.cpp  targetreport.h  (+10 more)
src/test/: CMakeLists.txt
src/test/aerodrometest/: CMakeLists.txt  aerodrometest.cpp
src/test/aixmreadertest/: AIXM51_KCLT_272B.xml  AIXM51_KORD_Runways.xml  CMakeLists.txt  aixmreadertest.cpp  kclt-test.xml
src/test/areahashtest/: CMakeLists.txt  areahashtest.cpp
src/test/asterixxmlreadertest/: CMakeLists.txt  asterixxmlreadertest.cpp  cat010-empty.xml  cat010-incomplete.xml  cat010-missing-attributes.xml  cat010.xml  cat010_empty.xml  cat010_incomplete.xml  cat010_invalid_attributes.xml  cat010_missing_attributes.xml  cat010_rollover.xml  cat010_rollover_delayed.xml
src/test/dgpscsvreadertest/: CMakeLists.txt  dgps_bad_header.csv  dgps_iso.csv  dgps_unix.csv  dgps_unix.csv.license  dgpscsvreadertest.cpp
src/test/evaluatortest/: CMakeLists.txt  dgps_34304F_20200505.csv  dgps_344399_20190521.csv  evaluatortest.cpp  lebl-insignia.kml  lebl_insignia.kml
src/test/geofunctionstest/: CMakeLists.txt  geofunctionstest.cpp
src/test/kmlreadertest/: CMakeLists.txt  kmlreadertest.cpp  lebl-insignia.kml  lebl-test.kml  lebl_test.kml  lemd_test.kml
src/test/mopsprocessortest/: ASTERIX_MLAT.xml  ASTERIX_SMR.xml  CAT010_MLAT_SrvMsg_MF.xml  CAT010_MLAT_SrvMsg_MF_case_A.xml  CAT010_MLAT_SrvMsg_MF_case_B.xml  CAT010_MLAT_SrvMsg_UR_case_A.xml  CAT010_MLAT_SrvMsg_UR_case_B.xml  CAT010_MLAT_TgtRep_MF_case_A.xml  CAT010_MLAT_TgtRep_MF_case_B.xml  CAT010_MLAT_TgtRep_PD_case_A.xml  CAT010_MLAT_TgtRep_PD_case_B.xml  CAT010_MLAT_TgtRep_UR_case_B.xml  CAT010_SMR_SrvMsg_MF_case_A.xml  CAT010_SMR_SrvMsg_MF_case_B.xml  CAT010_SMR_SrvMsg_UR_case_A.xml  CAT010_SMR_SrvMsg_UR_case_B.xml  CAT010_SMR_TgtRep_MF_case_A.xml  CAT010_SMR_TgtRep_MF_case_B.xml  CAT010_SMR_TgtRep_PD_case_B.xml  CAT010_SMR_TgtRep_UR_case_A.xml  CAT010_SMR_TgtRep_UR_case_B.xml  CMakeLists.txt  cat010-mlat-TgtRep-ur.xml  cat010-mlat-TgtRep.xml  cat010-smr-SrvMsg-ur.xml  cat010-smr-SrvMsg.xml  cat010-smr-TgtRep-ur.xml  cat010-smr-TgtRep.xml  mopsprocessortest.cpp
src/test/perfevaluatortest/: CMakeLists.txt  perfevaluatortest.cpp
src/test/recordcollatortest/: CMakeLists.txt  excluded.txt  recordcollatortest.cpp
src/test/recordfiltertest/: CMakeLists.txt  recordfiltertest.cpp
src/test/targetreportextractortest/: CMakeLists.txt  targetreportextractortest.cpp
src/test/trackassociatortest/: CMakeLists.txt  trackassociatortest.cpp
src/test/trackextractortest/: CMakeLists.txt  trackextractortest.cpp
src/test/tracktest/: CMakeLists.txt  tracktest.cpp
src/test/trafficperiodtest/: CMakeLists.txt  trafficperiodtest.cpp
