# Copyright (C) 2020-2021 Álvaro Cebrián Juan <acebrianjuan@gmail.com>
#
# ASTMOPS is a command line tool for evaluating
# the performance of A-SMGCS sensors at airports
#
# This file is part of ASTMOPS.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

add_subdirectory(app)
add_subdirectory(lib)
add_subdirectory(test)
