# Copyright (C) 2020 Álvaro Cebrián Juan <acebrianjuan@gmail.com>
#
# ASTMOPS is a surveillance performance analyzer
#      for Air Traffic Control
#
# This file is part of ASTMOPS.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

add_subdirectory(aerodrometest)
add_subdirectory(aixmreadertest)
add_subdirectory(areahashtest)
add_subdirectory(asterixxmlreadertest)
add_subdirectory(dgpscsvreadertest)
add_subdirectory(geofunctionstest)
add_subdirectory(kmlreadertest)
add_subdirectory(targetreportextractortest)
add_subdirectory(trackextractortest)

